--- a/CDN/mirror/index.html
+++ b/CDN/mirror/index.html
@@ -10,15 +10,9 @@
     <script src="/js/all.js"></script>
     <script src="/js/bg.js"></script>
     <script src="/js/live2d-widget/autoload.js"></script>
-    <!--BGM-->
-    <audio id="bgm" onload autoplay loop>
-        <source src="https://cdn.jsdelivr.net/gh/CNZWBYWTW/audio/坐钢叉的小曲.m4a">
-        <source src="https://raw.bgithub.xyz/CNZWBYWTW/audio/main/坐钢叉的小曲.m4a">
-    </audio>
 </head>
 
-<body
-    onclick="document.querySelector('#bgm').play();if(bgm.paused == false){console.log('BGM was successful to play!')}else{console.log('BGM wasn\u0027t successful to play!')}">
+<body>
     <div class="link">
         <details open>
             <summary>
