--- a/404.html
+++ b/404.html
@@ -13,6 +13,139 @@
 </head>
 
 <body>
+        <!--CNZW-->
+    <!--未启用或不支持JavaScript时显示页面-->
+    <noscript class="noscript">
+        <h2 class="noscript">
+            你的浏览器不支持或未启用JavaScript
+            <br>
+            请启用JavaScript后重新加载页面
+            <br>
+            <br>
+            <br>
+            <a id="help-javascript"
+                href="https://support.microsoft.com/zh-cn/office/%E5%90%AF%E7%94%A8-javascript-7bb9ee74-6a9e-4dd1-babf-b0a1bb136361">
+                获取更多帮助
+            </a>
+            <style>
+                #help-javascript {
+                    font-size: 17px;
+                    color: black;
+                    border: 5px solid red;
+                    border-radius: 5px;
+                }
+
+                #help-javascript:hover {
+                    color: rgb(0, 255, 0);
+                }
+            </style>
+            <div class="noscript-link">
+                Powered&nbsp;by
+                <a href="https://github.com/CNZWBYWTW" target="_blank">
+                    <img src="https://avatars.githubusercontent.com/CNZWBYWTW" class="noscript-avatar">
+                    <span class="MC">
+                        CNZWBYWTW
+                    </span>
+                </a>
+            </div>
+            <span class="copyright">
+                <b>
+                    Copyright&copy;&nbsp;by
+                    <a href="https://github.com/CNZWBYWTW" target="_blank" class="MC">
+                        CNZW
+                    </a>
+                    . All Right Reserved
+                </b>
+            </span>
+        </h2>
+        <style>
+            .noscript {
+                user-select: none;
+                position: fixed;
+                text-align: center;
+                z-index: 100;
+                background-color: rgb(50, 50, 50);
+                color: white;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                left: 0;
+            }
+
+            .noscript a {
+                text-decoration: none;
+                color: white;
+            }
+
+            .noscript-link {
+                margin-top: 50px;
+            }
+
+            .noscript-avatar {
+                background-color: black;
+                width: 20px;
+                border-radius: 50%;
+                margin-bottom: -2px;
+
+            }
+
+            .copyright {
+                font-size: 15px;
+            }
+
+            .MC {
+                font-family: 'MC';
+            }
+        </style>
+    </noscript>
+    <!--loading-->
+    <div id="loading">
+        <img src="/img/CNZW/loading.gif" id="loading-t">
+        <style>
+            #loading {
+                background-image: url("/img/CNZW/loading.gif");
+                background-color: white;
+                background-repeat: no-repeat;
+                background-size: cover;
+                background-position: center center;
+                margin: 0;
+                padding: 0;
+                height: 100vh;
+                background-attachment: fixed;
+                position: fixed;
+                z-index: 114514;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                transition: all 1000ms;
+                opacity: 1;
+            }
+
+            #loading.hidden {
+                opacity: 0;
+            }
+
+            #loading.hidden.hide {
+                display: none;
+            }
+
+            #loading-t {
+                display: none;
+            }
+        </style>
+        <script>
+            document.querySelector("#loading-t").addEventListener("load", function () {
+                setTimeout(function () {
+                    document.querySelector("#loading").className = "hidden";
+                    setTimeout(function () {
+                        document.querySelector("#loading").className = document.querySelector("#loading").className + " hide";
+                    }, 1000)
+                }, 4000)
+            })
+        </script>
+    </div>
+    <!--CNZW-->
     <div id="rbd"></div>
     <h3>
         <a href="/" class="til" title="HOME">HOME</a>
