--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-        <!--CNZW-->
+    <!--CNZW-->
     <!--未启用或不支持JavaScript时显示页面-->
     <noscript class="noscript">
         <h2 class="noscript">
@@ -213,7 +213,9 @@
         </b>
         <hr color="black" size="3" />
         <script>
-            document.querySelector("#CPY").innerText = new Date().getFullYear();
+            setInterval(function(){
+                document.querySelector("#CPY").innerText = new Date().getFullYear();
+            })
         </script>
     </footer>
 </body>
