--- a/404.html
+++ b/404.html
@@ -138,11 +138,11 @@
     <h4 id="error-url">
         <span id="url"></span>
     </h4>
-    <h3 id="pw">Powered by <a href="https://github.com/CNZW-WTW" target="_blank" id="pwl">CNZW</a></h3>
+    <h3 id="pw">Powered by <a href="https://github.com/CNZWBYWTW/" target="_blank" id="pwl">CNZW</a></h3>
     <footer id="footer">
         <hr color="black" size="3" />
-        <a href="https://github.com/CNZWSTUDIO/" target="_blank" title="GitHub:@CNZWSTUDIO">
-            <img src="https://img.shields.io/badge/GitHub-CNZWSTUDIO-black" alt="GitHub:@CNZWSTUDIO">
+        <a href="https://github.com/CNZWBYWTW/" target="_blank" title="GitHub:@CNZWBYWTW">
+            <img src="https://img.shields.io/badge/GitHub-CNZWBYWTW-black" alt="GitHub:@CNZWBYWTW">
         </a>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="https://space.bilibili.com/3493132140284888/" target="_blank" title="Bilibili:@CNZW">
