--- a/404.html
+++ b/404.html
@@ -120,6 +120,10 @@
                 opacity: 0;
             }
 
+            #loading.none {
+                display: none;
+            }
+
             #loading-v {
                 width: 100%;
                 height: 100vh;
@@ -135,7 +139,7 @@
                 if (document.querySelector("#loading-v").currentTime >= 3.9 & document.querySelector("#loading").className.startsWith("hidden") != true) {
                     document.querySelector("#loading").className = "hidden";
                     setTimeout(function () {
-                        document.querySelector("#loading").innerHTML = "";
+                        document.querySelector("#loading").className += " none";
                     }, 1000)
                 }
             })
